--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 
+android.enableR8=true
+
+### 解决flutter打包apk报错：Your app isn't using AndroidX.
+android.enableJetifier=true
+android.useAndroidX=true
