--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   dio: ^3.0.9
+  provider: ^4.0.4
+  fluttertoast: ^3.1.3
+  webview_flutter: ^0.3.19+9
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +45,6 @@ flutter:
 
   assets:
     - static/imgs/
-  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
