--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   webview_flutter: ^0.3.19+9
   shimmer: ^1.1.0
+  localstorage: ^3.0.1+4
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
